versions/3.0/zh/SUMMARY.md
# Summary

## 新手入门

[介绍](index.md)

- [基础使用](getting-started/index.md)
    - [关于 Cocos Creator](getting-started/introduction/index.md)
    - [安装和启动](getting-started/install/index.md)
    - [使用 Dashboard](getting-started/dashboard/index.md)
    - [Hello World!](getting-started/helloworld/index.md)
    - [项目结构](getting-started/project-structure/index.md)
    - [编辑器界面](editor/index.md)
        - [场景编辑器](editor/scene/index.md)
        - [层级管理器](editor/hierarchy/index.md)
        - [资源管理器](editor/assets/index.md)
        - [属性检查器](editor/inspector/index.md)
        - [控制台](editor/console/index.md)
        - [偏好设置](editor/preferences/index.md)
        - [项目设置](editor/project/index.md)
        - [主菜单](editor/mainMenu/index.md)
        - [工具栏](editor/toolbar/index.md)
        - [编辑器布局](editor/editor-layout/index.md)
        - [预览调试](editor/preview/index.md)
    - [获取帮助和支持](getting-started/support.md)
    - [注意事项](getting-started/attention/index.md)
- [快速上手：制作第一个游戏](getting-started/first-game/index.md)
- [升级指南](release-notes/index.md)
    - [v3.0 升级指南](release-notes/upgrade-guide-v3.0.md)
    - [v3.0 材质升级指南](material-system/effect-2.x-to-3.0.md)
    - [资源分包升级指南](asset/subpackage-upgrade-guide.md)
    - [资源管理模块升级指南](asset/asset-manager-upgrade-guide.md)

## 基本工作流

- [场景制作](concepts/scene/index.md)
    - [场景资源](asset/scene.md)
    - [节点和组件](concepts/scene/node-component.md)
    - [坐标系和节点变换](concepts/scene/coord.md)
    - [节点层级和渲染顺序](concepts/scene/node-tree.md)
    - [使用场景编辑器搭建场景](concepts/scene/scene-editing.md)

- [资源系统](asset/index.md)
    - [资源工作流](asset/asset-workflow.md)
    - [图像资源](asset/image.md)
        - [纹理贴图资源](asset/texture.md)
        - [精灵帧资源](asset/sprite-frame.md)
            - [图像资源的自动剪裁](ui-system/components/engine/trim.md)
        - [立方体贴图资源](asset/texture-cube.md)
        - [图集资源](asset/atlas.md)
        - [自动图集资源](asset/auto-atlas.md)
        - [艺术数字资源](asset/label-atlas.md)
    - [预制资源](asset/prefab.md)
    - [字体资源](asset/font.md)
    - [音频资源](asset/audio.md)
    - [材质资源](asset/material.md)
    - [模型资源](asset/model/mesh.md)
        - [从第三方工具导出模型资源](asset/model/dcc-export-mesh.md)
        - [glTF 模型](asset/model/glTF.md)
    - [Spine 骨骼动画资源](asset/spine.md)
    - [DragonBones 骨骼动画资源](asset/dragonbones.md)
    - [TiledMap 瓦片图资源](asset/tiledmap.md)
    - [JSON 资源](asset/json.md)
    - [文本资源](asset/text.md)

- [脚本指南及事件机制](scripting/index.md)
    - [编程语言支持](scripting/language-support.md)
    - [脚本基础](scripting/script-basics.md)
        - [创建脚本](scripting/setup.md)
        - [配置代码编辑环境](scripting/coding-setup.md)
        - [脚本运行环境](scripting/basic.md)
        - [装饰器使用](scripting/decorator.md)
        - [属性参数参考](scripting/reference/attributes.md)
        - [生命周期回调](scripting/life-cycle-callbacks.md)
    - [脚本使用](scripting/usage.md)
        - [访问节点和其他组件](scripting/access-node-component.md)
        - [常用节点和组件接口](scripting/basic-node-api.md)
        - [创建和销毁节点](scripting/create-destroy.md)
        - [使用计时器](scripting/scheduler.md)
        - [组件和组件执行顺序](scripting/component.md)
        - [加载和切换场景](scripting/scene-managing.md)
        - [获取和加载资源](scripting/load-assets.md)
        - [tsconfig 配置](scripting/tsconfig.md)
    - [脚本进阶](scripting/reference-class.md)
    - [事件系统](engine/event/index.md)
        - [发射和监听事件](engine/event/event-emit.md)
        - [节点系统事件](engine/event/event-builtin.md)
        - [全局系统事件](engine/event/event-input.md)
        - [事件 API](engine/event/event-api.md)
    - [模块规范与示例](scripting/modules/index.md)
        - [引擎模块](scripting/modules/engine.md)
        - [外部模块使用案例](scripting/modules/example.md)
        - [模块规范](scripting/modules/spec.md)
    - [插件脚本](scripting/external-scripts.md)

- [跨平台发布](editor/publish/index.md)
    - [熟悉构建发布面板](editor/publish/build-panel.md)
    - [通用构建选项介绍](editor/publish/build-options.md)
    - [发布到 Web 平台](editor/publish/publish-web.md)
    - [发布到原生平台](editor/publish/native-options.md)
        - [安装配置原生环境](editor/publish/setup-native-development.md)
        - [原生平台 JavaScript 调试](editor/publish/debug-jsb.md)
    - [发布到小游戏平台](editor/publish/publish-mini-game.md)
        - [发布到 HUAWEI AppGallery Connect](editor/publish/publish-huawei-agc.md)
        - [发布到支付宝小游戏](editor/publish/publish-alipay-mini-game.md)
        - [发布到字节跳动小游戏](editor/publish/publish-bytedance-mini-game.md)
        - [发布到华为快游戏](editor/publish/publish-huawei-quick-game.md)
        - [发布到 OPPO 小游戏](editor/publish/publish-oppo-mini-game.md)
        - [发布到 vivo 小游戏](editor/publish/publish-vivo-mini-game.md)
        - [发布到小米快游戏](editor/publish/publish-xiaomi-quick-game.md)
        - [发布到百度小游戏](editor/publish/publish-baidu-mini-game.md)
        - [发布到微信小游戏](editor/publish/publish-wechatgame.md)
            - [启用微信小游戏引擎插件](editor/publish/wechatgame-plugin.md)
            - [接入微信 PC 小游戏](editor/publish/publish-pc-wechatgame.md)
        - [开放数据域](editor/publish/build-open-data-context.md)
        - [小游戏分包](editor/publish/subpackage.md)
    - [命令行发布项目](editor/publish/publish-in-command-line.md)
    - [构建流程简介与常见错误处理](editor/publish/build-guide.md)
    - [定制项目的构建模版](editor/publish/custom-project-build-template.md)

## 功能模块

- [图形渲染](module-map/graphics.md)
    - [渲染管线](render-pipeline/overview.md)
        - [内置管线](render-pipeline/builtin-pipeline.md)
    - [相机](editor/components/camera-component.md)
    - [光照](concepts/scene/light.md)
        - [基于物理的光照](concepts/scene/light/pbr-lighting.md)
        - [光源](concepts/scene/light/lightType/index.md)
            - [平行光](concepts/scene/light/lightType/dir-light.md)
            - [球面光](concepts/scene/light/lightType/sphere-light.md)
            - [聚光灯](concepts/scene/light/lightType/spot-light.md)
            - [环境光](concepts/scene/light/lightType/ambient.md)
        - [基于多 Pass 的多光源支持](concepts/scene/light/additive-per-pixel-lights.md)
        - [阴影](concepts/scene/light/shadow.md)
        - [光照贴图](concepts/scene/light/lightmap.md)
    - [网格](module-map/mesh/index.md)
        - [MeshRenderer](engine/renderable/model-component.md)
        - [SkinnedMeshRenderer 组件](module-map/mesh/skinnedMeshRenderer.md)
        - [SkinnedMeshBatchRenderer 组件](module-map/mesh/skinnedMeshBatchRenderer.md)
    - [纹理](module-map/texture/index.md)
        - [压缩纹理](asset/compress-texture.md)
        - [渲染纹理](asset/render-texture.md)
    - [材质系统](material-system/overview.md)
        - [YAML 101](material-system/yaml-101.md)
        - [Effect Syntax](material-system/effect-syntax.md)
        - [Pass Params](material-system/pass-parameter-list.md)
        - [Builtin Shader Uniforms](material-system/builtin-shader-uniforms.md)
    - [特效组件](module-map/effects/index.md)
        - [广告牌](particle-system/billboard-component.md)
        - [线段组件](particle-system/line-component.md)
    - [天空盒](concepts/scene/skybox.md)
    - [全局雾](concepts/scene/fog.md)

- [2D 对象](2d-object/index.md)
    - [2D 渲染](2d-object/2d-render/index.md)
        - [渲染排序规则](ui-system/components/engine/priority.md)
        - [2D 渲染组件合批说明](ui-system/components/engine/ui-batch.md)
        - [2D 渲染对象自定义材质](ui-system/components/engine/ui-material.md)
        - [2D 渲染组件](ui-system/components/editor/render-component.md)
            - [Sprite 组件参考](ui-system/components/editor/sprite.md)
            - [Label 组件参考](ui-system/components/editor/label.md)
            - [Mask 组件参考](ui-system/components/editor/mask.md)
            - [Graphics 组件参考](ui-system/components/editor/graphics.md)
            - [RichText 组件参考](ui-system/components/editor/richtext.md)
            - [UIStaticBatch 组件参考](ui-system/components/editor/ui-static.md)
            - [Spine Skeleton 组件参考](editor/components/spine.md)
            - [DragonBones ArmatureDisplay 组件参考](editor/components/dragonbones.md)
            - [TiledMap 组件参考](editor/components/tiledmap.md)
            - [TiledTile 组件参考](editor/components/tiledtile.md)
            - [MotionStreak 组件参考](editor/components/motion-streak.md)
    - [UI 系统](2d-object/ui-system/index.md)
        - [UI 组件](ui-system/components/editor/base-component.md)
            - [Canvas 组件参考](ui-system/components/editor/canvas.md)
            - [UITransform 组件参考](ui-system/components/editor/ui-transform.md)
            - [Widget 组件参考](ui-system/components/editor/widget.md)
            - [Button 组件参考](ui-system/components/editor/button.md)
            - [Layout 组件参考](ui-system/components/editor/layout.md)
            - [EditBox 组件参考](ui-system/components/editor/editbox.md)
            - [ScrollView 组件参考](ui-system/components/editor/scrollview.md)
            - [ScrollBar 组件参考](ui-system/components/editor/scrollbar.md)
            - [ProgressBar 组件参考](ui-system/components/editor/progress.md)
            - [LabelOutline 组件参考](ui-system/components/editor/label-outline.md)
            - [LabelShadow 组件参考](ui-system/components/editor/label-shadow.md)
            - [Toggle 组件参考](ui-system/components/editor/toggle.md)
            - [ToggleContainer 组件参考](ui-system/components/editor/toggleContainer.md)
            - [Slider 组件参考](ui-system/components/editor/slider.md)
            - [PageView 组件参考](ui-system/components/editor/pageview.md)
            - [PageViewIndicator 组件参考](ui-system/components/editor/pageviewindicator.md)
            - [UIMeshRenderer 组件参考](ui-system/components/editor/ui-model.md)
            - [UICoordinateTracker 组件参考](ui-system/components/editor/ui-coordinate-tracker.md)
            - [UIOpacity 组件参考](ui-system/components/editor/ui-opacity.md)
            - [BlockInputEvents 组件参考](ui-system/components/editor/block-input-events.md)
            - [WebView 组件参考](ui-system/components/editor/webview.md)
            - [VideoPlayer 组件参考](ui-system/components/editor/videoplayer.md)
            - [SafeArea 组件参考](ui-system/components/editor/safearea.md)
        - [UI 实践指南](ui-system/components/engine/usage-ui.md)
            - [多分辨率适配方案](ui-system/components/engine/multi-resolution.md)
            - [对齐策略](ui-system/components/engine/widget-align.md)
            - [文字排版](ui-system/components/engine/label-layout.md)
            - [自动布局容器](ui-system/components/engine/auto-layout.md)
            - [制作动态生成内容的列表](ui-system/components/engine/list-with-data.md)
            - [制作可任意拉伸的 UI 图像](ui-system/components/engine/sliced-sprite.md)

- [动画系统](animation/index.md)
    - [动画剪辑](animation/animation-clip.md)
    - [动画组件参考](animation/animation-comp.md)
    - [使用动画编辑器](animation/animation.md)
        - [创建 Animation 组件和动画剪辑](animation/animation-create.md)
        - [动画编辑器面板介绍](animation/animation-editor.md)
        - [编辑动画剪辑](animation/edit-animation-clip.md)
        - [编辑动画缓动曲线](animation/animation-curve.md)
        - [添加动画事件](animation/animation-event.md)
        - [使用动画曲线](animation/use-animation-curve.md)
    - [骨骼动画组件](animation/skeletal-animation.md)
        - [骨骼贴图布局设置](animation/joint-texture-layout.md)
    - [使用脚本控制动画](animation/animation-component.md)
        - [动画状态](animation/animation-state.md)

- [音频系统](audio-system/overview.md)
    - [AudioSource 组件参考](audio-system/audiosource.md)
    - [音频播放示例](audio-system/audioExample.md)
    - [兼容性说明](audio-system/audioLimit.md)

- [物理系统](physics/index.md)
    - [2D 物理](physics-2d/physics-2d.md)
        - [2D 物理系统](physics-2d/physics-2d-system.md)
        - [2D 刚体组件](physics-2d/physics-2d-rigid-body.md)
        - [2D 碰撞体](physics-2d/physics-2d-collider.md)
        - [2D 碰撞回调](physics-2d/physics-2d-contact-callback.md)
        - [2D 物理关节](physics-2d/physics-2d-joint.md)
    - [3D 物理](physics/physics.md)
        - [物理选项](physics/physics-item.md)
        - [物理系统](physics/physics-system.md)
        - [物理组件](physics/physics-component.md)
        - [使用物理](physics/physics-use.md)
            - [使用碰撞器](physics/physics-collider.md)
            - [物理配置](editor/project/physics-configs.md)
            - [物理材质](physics/physics-material.md)
            - [使用刚体](physics/physics-rigidbody.md)
            - [物理事件](physics/physics-event.md)
            - [分组和掩码](physics/physics-group-mask.md)
            - [射线检测](physics/physics-raycast.md)

- [粒子系统](particle-system/index.md)
    - [2D 粒子](particle-system/2d-particle/2d-particle.md)
    - [3D 粒子](particle-system/overview.md)
        - [粒子系统模块](particle-system/module.md)
            - [主模块](particle-system/main-module.md)
            - [发射器模块](particle-system/emitter.md)
            - [速度模块](particle-system/velocity-module.md)
            - [加速度模块](particle-system/force-module.md)
            - [大小模块](particle-system/size-module.md)
            - [旋转模块](particle-system/rotation-module.md)
            - [颜色模块](particle-system/color-module.md)
            - [贴图动画模块](particle-system/texture-animation-module.md)
            - [限速模块](particle-system/limit-velocity-module.md)
            - [拖尾模块](particle-system/trail-module.md)
            - [渲染模块](particle-system/renderer.md)
        - [粒子属性编辑](particle-system/editor/index.md)
            - [控制面板](particle-system/editor/particle-effect-panel.md)
            - [曲线编辑器](particle-system/editor/curve-editor.md)
            - [渐变色编辑器](particle-system/editor/gradient-editor.md)

- [缓动系统](tween/index.md)

- [地形系统](editor/terrain/index.md)

- [资源管理](asset/asset-manager.md)
    - [loader 升级 assetManager 指南](asset/asset-manager-upgrade-guide.md)
    - [子包升级 Asset Bundle 指南](asset/subpackage-upgrade-guide.md)
    - [资源加载](asset/dynamic-load-resources.md)
    - [Asset Bundle](asset/bundle.md)
    - [资源释放](asset/release-manager.md)
    - [下载与解析](asset/downloader-parser.md)
    - [加载与预加载](asset/preload-load.md)
    - [缓存管理器](asset/cache-manager.md)
    - [可选参数](asset/options.md)
    - [管线与任务](asset/pipeline-task.md)
    - [资源管理注意事项 - meta 文件](asset/meta.md)

## 进阶教程

- [扩展编辑器](editor/extension/readme.md)
    - [第一个扩展包](editor/extension/first.md)
    - [第一个面板](editor/extension/first-panel.md)
    - [第一次数据交互](editor/extension/first-communication.md)
    - [安装与分享](editor/extension/install.md)
    - [提交插件到商店](editor/extension/store/upload-store.md)
    - [扩展面板](editor/extension/panel.md)
        - [编写面板](editor/extension/panel-boot.md)
        - [面板与插件的通信](editor/extension/panel-messages.md)
        - [与其他面板的通信](editor/extension/to-panel-messages.md)
    - [扩展已有功能](editor/extension/contributions.md)
        - [自定义消息](editor/extension/contributions-messages.md)
        - [快捷键](editor/extension/contributions-shortcuts.md)
        - [场景脚本](editor/extension/scene-script.md)
        - [扩展主菜单](editor/extension/contributions-menu.md)
        - [扩展资源管理器面板](editor/assets/extension.md)
        - [扩展项目设置面板](editor/extension/contributions-project.md)
        - [扩展偏好设置面板](editor/extension/contributions-preferences.md)
        - [扩展构建流程](editor/publish/custom-build-plugin.md)
    - [基础功能](editor/extension/basic.md)
        - [扩展包定义](editor/extension/define.md)
        - [插件系统](editor/extension/package.md)
        - [消息系统](editor/extension/messages.md)
        - [多语言系统](editor/extension/i18n.md)
        - [配置系统](editor/extension/profile.md)
        - [UI 组件](editor/extension/ui.md)

- [进阶主题](advanced-topics/index.md)
    - [如何向 Cocos 提交代码](submit-pr/submit-pr.md)
    - [热更新范例教程](advanced-topics/hot-update.md)
    - [热更新管理器](advanced-topics/hot-update-manager.md)
    - [动态合图](advanced-topics/dynamic-atlas.md)
    - [引擎定制工作流程](advanced-topics/engine-customization.md)
    - [网页预览定制工作流程](editor/preview/browser.md)
    - [JSB 2.0 使用指南](advanced-topics/JSB2.0-learning.md)
        - [JSB 手动绑定](advanced-topics/jsb-manual-binding.md)
        - [JSB 自动绑定](advanced-topics/jsb-auto-binding.md)
    - [Java 原生反射机制](advanced-topics/java-reflection.md)
    - [Objective-C 原生反射机制](advanced-topics/oc-reflection.md)
    - [CMake 使用简介](advanced-topics/cmake-learning.md)
    - [WebSocket 服务器](advanced-topics/websocket-server.md)
